--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,6 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
+    <link rel="manifest" href="/favicon/site.webmanifest">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/index.css">
@@ -12,10 +16,10 @@
 
 <body>
     <div class="container-fluid background-container mx-0 px-0 vh-100 d-flex justify-content-center flex-column">
-        <div class="justify-content-center pt-3 px-3" style="position: absolute; top: 0; right: 0; width: 100vw;">
+        <div class="justify-content-center pt-3" style="position: absolute; top: 0; right: 0; width: 100vw;">
             <div class="col d-flex justify-content-end">
                 <a href="/register">
-                    <button class="btn btn-dark ">Sign
+                    <button class="btn btn-primary ">Sign
                         Up</button>
                 </a>
             </div>
@@ -50,7 +54,7 @@
                                     <input type="checkbox" class="custom-control-input" id="customCheck1">
                                     <label class="custom-control-label" for="customCheck1">Remember password</label>
                                 </div>
-                                <button class="btn btn-lg btn-dark btn-block mb-3" type="submit">Sign
+                                <button class="btn btn-lg btn-primary btn-block mb-3" type="submit">Sign
                                     In</button>
 
                             </form>
