--- a/public/css/index.css
+++ b/public/css/index.css
@@ -93,9 +93,17 @@ input[type=number]::-webkit-outer-spin-button {
 	line-height: 90%;
 }
 
+h6 {
+	line-height: 1.5rem;
+}
+
 .h5 {
 	font-size: 1.2em;
 	font-weight: 200;
+}
+
+h5 {
+	font-weight: 300;
 }
 
 .system-message {
