--- a/views/register.ejs
+++ b/views/register.ejs
@@ -25,8 +25,8 @@
             </div>
 
         </div>
-        <div class="row no-gutters justify-content-center vw-100 pt-4">
-            <div class="col">
+        <div class="row no-gutters justify-content-center vw-100 pt-5 mt-5">
+            <div class="col mt-5 pt-2">
                 <div class="container-fluid text-center text-main h1">Your Personal Movie Database</div>
             </div>
 
