--- a/views/register.ejs
+++ b/views/register.ejs
@@ -26,7 +26,7 @@
 
         </div>
         <div class="row no-gutters justify-content-center vw-100 pt-5 mt-5">
-            <div class="col mt-5 pt-2">
+            <div class="col mt-2">
                 <div class="container-fluid text-center text-main h1">Your Personal Movie Database</div>
             </div>
 
@@ -45,7 +45,7 @@
                                 </div>
                                 <div class="form-label-group">Last name:
                                     <input type="text" id="lastName" autocomplete="family-name"
-                                        class="form-control mb-3" placeholder="Last name" autofocus>
+                                        class="form-control mb-3" placeholder="Last name" autofocus required>
 
                                 </div>
                                 <div class="form-label-group">Username:
