setting list containers height

--- a/views/userPage.ejs
+++ b/views/userPage.ejs
@@ -310,7 +310,7 @@
         </div>
 
 
-        <div class="container p-0 mb-4 shadow rounded" id="waypoint"
+        <div class="container p-0 mb-4 shadow rounded" id="listContainer"
             style="width: 21.5rem;height: 80vh; background-color:whitesmoke; transform: translate(0px,70px);">
             <div class="d-flex justify-content-between pt-3 pb-2 container" id="watchedMoviesHeader">
                 <h4 class=" text-main d-inline-block mt-2 ">Watched Movies</h4>
