fixing register link in index page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -58,7 +58,7 @@
                                     In</button>
 
                             </form>
-                            <div class="text-center"> <a class="text-dark" href="./register.html">Don't have an
+                            <div class="text-center"> <a class="text-dark" href="/register">Don't have an
                                     account?<br>
                                     Register
                                     right
