--- a/views/register.ejs
+++ b/views/register.ejs
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <div class="container-fluid background-container mx-0 px-0 vh-100 d-flex justify-content-center flex-column">
+    <div class="container-fluid background-container mx-0 px-0 vh-100 d-flex flex-column">
         <div class="justify-content-center pt-3" style="position: absolute; top: 0; right: 0; width: 100vw;">
             <div class="col d-flex justify-content-end">
                 <a href="/">
