--- a/views/userPage.ejs
+++ b/views/userPage.ejs
@@ -294,7 +294,7 @@
             <div class="d-flex flex-column justify-content-center p-4 profileInfo-box shadow" id="profileInfoBox">
                 <div class="d-flex flex-row justify-content-center mb-2">
                     <!-- <i class="far fa-user-circle h1 my-auto"></i> -->
-                    <img src="https://api.adorable.io/avatars/60/<%= firstname  %><%= lastname  %>.png"
+                    <img src="https://avatars.dicebear.com/api/gridy/<%= firstname  %><%= lastname  %>.svg"
                         style="border-radius: 35%;" alt="">
                     <div class="h2 my-auto ml-3"><%= firstname  %> <%= lastname  %></div>
                 </div>
