--- a/views/userPage.ejs
+++ b/views/userPage.ejs
@@ -295,7 +295,7 @@
                 <div class="d-flex flex-row justify-content-center mb-2">
                     <!-- <i class="far fa-user-circle h1 my-auto"></i> -->
                     <img src="https://avatars.dicebear.com/api/gridy/<%= firstname  %><%= lastname  %>.svg"
-                        style="border-radius: 35%;" alt="">
+                        style="border-radius: 35%; width: 60px;" alt="">
                     <div class="h2 my-auto ml-3"><%= firstname  %> <%= lastname  %></div>
                 </div>
                 <div class="d-flex flex-row justify-content-center">
