--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,7 +25,7 @@
             </div>
 
         </div>
-        <div class="row no-gutters justify-content-center vw-100 pt-4">
+        <div class="row no-gutters justify-content-center vw-100" style="padding-top: 4rem;">
             <div class="col">
                 <div class="container-fluid text-center text-main h1">Your Personal Movie Database</div>
             </div>
